--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,21 +1,24 @@
 {
-  "image": "docker.io/node:22-alpine",
+  "image": "mcr.microsoft.com/devcontainers/python:3.12",
   "mounts": [
     "type=bind,source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/root/.ssh"
   ],
   "customizations": {
     "vscode": {
       "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance"
       ]
     }
   },
   "features": {
-    "ghcr.io/cirolosapio/devcontainers-features/alpine-openssh:0": {},
-    "ghcr.io/cirolosapio/devcontainers-features/alpine-git:0": {}
+    "ghcr.io/devcontainers/features/common-utils:2": {},
+    "ghcr.io/devcontainers/features/git:1": {}
   },
   "forwardPorts": [3000],
   "shutdownAction": "stopContainer",
   "containerEnv": {
-    "NODE_ENV": "development"
-  }
+    "PYTHON_ENV": "development"
+  },
+  "postCreateCommand": "pip install -r requirements.txt"
 }
